# etl-workflow

./: .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml  scheduler_entrypoint.sh
dags/: dbt.py  export_alimconfiance.py  google_maps_platform.py  osm-france-food-service.py  tripadvisor.py
dbt_suretbon/: dbt_project.yml
dbt_suretbon/macros/: clean_name.sql
dbt_suretbon/models/mart/: restaurants_final_matching.sql
dbt_suretbon/models/staging/: schema.yml  stg_alimconfiance.sql  stg_france_food.sql  stg_google_ratings.sql  stg_tripadvisor_ratings.sql
